All H1 drivers working, implemented primary designation for M3